fix dialog on safari

--- a/picker.css
+++ b/picker.css
@@ -22,9 +22,25 @@ dialog {
     top: 50%;
     transform: translateY(-50%);
     max-height: 90vh;
-    border-width: 1px;
     z-index: 1001;
+    left: 0px;
+    right: 0px;
+    width: fit-content;
+    height: fit-content;
+    margin: auto;
+    box-shadow: 0 0 40px rgb(0 0 0 / 10%), 0 0 10px rgb(0 0 0 / 25%);
+    border-width: 0;
+    border-radius: 4px;
+    border-image: initial;
+    padding: 1em;
+    color:black;
+    background: white;
 }
+
+dialog:not([open]) {
+    display: none;
+}
+
 dialog[open]+.backdrop {
     content: '';
     z-index: 1;
